traefik/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v2.10.7
          args:
            - --configFile=/etc/traefik/traefik-config.yaml
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: traefik-config
              mountPath: /etc/traefik
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
