traefik/traefik-dashboard.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`test.thexiao77.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
